@@ -85,31 +85,11 @@ G_GNUC_INTERNAL void murrine_rounded_rectangle_fast (cairo_t *cr,
                                                      double x, double y, double w, double h,
                                                      uint8 corners);
 
-G_GNUC_INTERNAL void murrine_draw_lightborder (cairo_t *cr,
-                                               const MurrineRGB *highlight_color, const MurrineRGB *fill,
-                                               MurrineGradients mrn_gradient,
-                                               double x, double y, int width, int height,
-                                               boolean gradients, boolean horizontal,
-                                               int glazestyle, int lightborderstyle,
-                                               int radius, uint8 corners);
-
 G_GNUC_INTERNAL void murrine_set_gradient (cairo_t *cr,
                                            const MurrineRGB *color,
                                            MurrineGradients mrn_gradient,
                                            double x, double y, int width, int height,
                                            boolean gradients, boolean alpha);
-
-G_GNUC_INTERNAL void murrine_draw_flat_highlight (cairo_t *cr,
-                                                  int x, int y, int width, int height);
-
-G_GNUC_INTERNAL void murrine_draw_curved_highlight (cairo_t *cr,
-                                                    int x, int y, int width, int height);
-
-G_GNUC_INTERNAL void murrine_draw_curved_highlight_top (cairo_t *cr,
-                                                        int x, int y, int width, int height);
-
-G_GNUC_INTERNAL void murrine_draw_curved_highlight_bottom (cairo_t *cr,
-                                                           int x, int y, int width, int height);
 
 G_GNUC_INTERNAL void murrine_draw_glaze (cairo_t *cr,
                                          const MurrineRGB *fill,
